force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Custom Attachment object referencing Store-related addresses for Owners, Dealers, and Trucks.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADD-{0000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>