force-app/main/default/objects/Address__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>